--- a/db.conf
+++ b/db.conf
@@ -1,4 +1,4 @@
-jdbcUrl=jdbc:mysql://localhost:3306/city?useUnicode\=true&useLegacyDatetimeCode\=false&serverTimezone\=UTC
+jdbcUrl=jdbc:mysql://localhost:3306/city?useUnicode\=true&useLegacyDatetimeCode\=false&serverTimezone\=Europe/Budapest
 username=buzz
 password=test
 dataSource.cachePrepStmts=true
